# borderless

./: CMakeLists.txt  README.md
include/: borderless.h  window.h
src/: borderless.cpp
